[gd_scene load_steps=29 format=2]

[ext_resource path="res://PixelArts/Duvar2.png" type="Texture" id=1]
[ext_resource path="res://PixelArts/Door2.png" type="Texture" id=2]
[ext_resource path="res://PixelArts/Door.png" type="Texture" id=3]
[ext_resource path="res://PixelArts/ZeminTaban.png" type="Texture" id=4]
[ext_resource path="res://PixelArts/Hucre.png" type="Texture" id=5]
[ext_resource path="res://PixelArts/Tavan.png" type="Texture" id=6]
[ext_resource path="res://PixelArts/Zemin.png" type="Texture" id=7]
[ext_resource path="res://PixelArts/Duvar.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://PixelArts/Tavan2.png" type="Texture" id=10]
[ext_resource path="res://Scenes/Room1Cikis.tscn" type="PackedScene" id=11]
[ext_resource path="res://PixelArts/Masa.png" type="Texture" id=12]
[ext_resource path="res://PixelArts/Sandalye.png" type="Texture" id=13]
[ext_resource path="res://PixelArts/ElevatorFood.png" type="Texture" id=14]
[ext_resource path="res://Scripts/FoodElevator.gd" type="Script" id=15]
[ext_resource path="res://PixelArts/RedLock.png" type="Texture" id=16]
[ext_resource path="res://Scenes/PauseMenu.tscn" type="PackedScene" id=17]
[ext_resource path="res://Musics/Portal2-1x08-Haunted_Panels.mp3" type="AudioStream" id=18]
[ext_resource path="res://PixelArts/Masa2.png" type="Texture" id=19]
[ext_resource path="res://PixelArts/sifonyer2.png" type="Texture" id=20]

[sub_resource type="OccluderPolygon2D" id=14]
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="OccluderPolygon2D" id=16]
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="OccluderPolygon2D" id=17]
polygon = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=11]
0/name = "Zemin.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 14 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 15 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "ZeminTaban.png 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 16 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Duvar.png 2"
2/texture = ExtResource( 8 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Tavan.png 3"
3/texture = ExtResource( 6 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/occluder = SubResource( 17 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 18 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Door.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Door2.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Duvar2.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Tavan2.png 7"
7/texture = ExtResource( 10 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[sub_resource type="TileSet" id=12]
0/name = "Hucre.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Door.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Door2.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 19, 23 )

[node name="Room1YemekOda" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="32x32" type="TileMap" parent="."]
tile_set = SubResource( 11 )
cell_size = Vector2( 32, 32 )
collision_layer = 4
collision_mask = 3
format = 1
tile_data = PoolIntArray( -655371, 1, 0, -655370, 1, 0, -655369, 1, 0, -655368, 1, 0, -655367, 1, 0, -655366, 1, 0, -655365, 1, 0, -655364, 1, 0, -655363, 1, 0, -655362, 1, 0, -655361, 1, 0, -720896, 1, 0, -720895, 1, 0, -720894, 1, 0, -720893, 1, 0, -720892, 1, 0, -720891, 1, 0, -720890, 1, 0, -720889, 1, 0, -720888, 1, 0, -720887, 1, 0, -720886, 1, 0, -720885, 1, 0, -720884, 1, 0, -720883, 1, 0, -720882, 1, 0, -720881, 1, 0, -720880, 1, 0, -720879, 1, 0, -720878, 1, 0, -720877, 1, 0, -720876, 1, 0, -720875, 1, 0, -720874, 1, 0, -720873, 1, 0, -720872, 1, 0, -589835, 1, 0, -589834, 1, 0, -589833, 1, 0, -589832, 1, 0, -589831, 1, 0, -589830, 1, 0, -589829, 1, 0, -589828, 1, 0, -589827, 1, 0, -589826, 1, 0, -589825, 1, 0, -655360, 1, 0, -655359, 1, 0, -655358, 1, 0, -655357, 1, 0, -655356, 1, 0, -655355, 1, 0, -655354, 1, 0, -655353, 1, 0, -655352, 1, 0, -655351, 1, 0, -655350, 1, 0, -655349, 1, 0, -655348, 1, 0, -655347, 1, 0, -655346, 1, 0, -655345, 1, 0, -655344, 1, 0, -655343, 1, 0, -655342, 1, 0, -655341, 1, 0, -655340, 1, 0, -655339, 1, 0, -655338, 1, 0, -655337, 1, 0, -655336, 1, 0, -524299, 1, 0, -524298, 1, 0, -524297, 1, 0, -524296, 1, 0, -524295, 1, 0, -524294, 1, 0, -524293, 1, 0, -524292, 1, 0, -524291, 1, 0, -524290, 1, 0, -524289, 1, 0, -589824, 1, 0, -589823, 1, 0, -589822, 1, 0, -589821, 1, 0, -589820, 1, 0, -589819, 1, 0, -589818, 1, 0, -589817, 1, 0, -589816, 1, 0, -589815, 1, 0, -589814, 1, 0, -589813, 1, 0, -589812, 1, 0, -589811, 1, 0, -589810, 1, 0, -589809, 1, 0, -589808, 1, 0, -589807, 1, 0, -589806, 1, 0, -589805, 1, 0, -589804, 1, 0, -589803, 1, 0, -589802, 1, 0, -589801, 1, 0, -589800, 1, 0, -458763, 1, 0, -458762, 1, 0, -458761, 1, 0, -458760, 1, 0, -458759, 1, 0, -458758, 1, 0, -458757, 1, 0, -458756, 1, 0, -458755, 1, 0, -458754, 1, 0, -458753, 1, 0, -524288, 1, 0, -524287, 1, 0, -524286, 1, 0, -524285, 1, 0, -524284, 1, 0, -524283, 1, 0, -524282, 1, 0, -524281, 1, 0, -524280, 1, 0, -524279, 1, 0, -524278, 1, 0, -524277, 1, 0, -524276, 1, 0, -524275, 1, 0, -524274, 1, 0, -524273, 1, 0, -524272, 1, 0, -524271, 1, 0, -524270, 1, 0, -524269, 1, 0, -524268, 1, 0, -524267, 1, 0, -524266, 1, 0, -524265, 1, 0, -524264, 1, 0, -393227, 1, 0, -393226, 1, 0, -393225, 1, 0, -393224, 1, 0, -393223, 1, 0, -393222, 1, 0, -393221, 1, 0, -393220, -1073741823, 0, -393219, -1073741823, 0, -393218, -1073741823, 0, -393217, -1073741823, 0, -458752, -1073741823, 0, -458751, -1073741823, 0, -458750, -1073741823, 0, -458749, -1073741823, 0, -458748, -1073741823, 0, -458747, -1073741823, 0, -458746, -1073741823, 0, -458745, -1073741823, 0, -458744, -1073741823, 0, -458743, -1073741823, 0, -458742, -1073741823, 0, -458741, -1073741823, 0, -458740, -1073741823, 0, -458739, -1073741823, 0, -458738, -1073741823, 0, -458737, -1073741823, 0, -458736, -1073741823, 0, -458735, -1073741823, 0, -458734, -1073741823, 0, -458733, 1, 0, -458732, 1, 0, -458731, 1, 0, -458730, 1, 0, -458729, 1, 0, -458728, 1, 0, -327691, 1, 0, -327690, 1, 0, -327689, 1, 0, -327688, 1, 0, -327687, 1, 0, -327686, 1, 0, -327685, 1, 0, -327684, 1, 0, -327683, 1, 0, -327682, 1, 0, -327681, 1, 0, -393216, 1, 0, -393215, 1, 0, -393214, 1, 0, -393213, 1, 0, -393212, 1, 0, -393211, 1, 0, -393210, 1, 0, -393209, 1, 0, -393208, 1, 0, -393207, 1, 0, -393206, 1, 0, -393205, 1, 0, -393204, 1, 0, -393203, 1, 0, -393202, 1, 0, -393201, 1, 0, -393200, 1, 0, -393199, 1, 0, -393198, 1, 0, -393197, 1, 0, -393196, 1, 0, -393195, 1, 0, -393194, 1, 0, -393193, 1, 0, -393192, 1, 0, -262155, 1, 0, -262154, 1, 0, -262153, 1, 0, -262152, 1, 0, -262151, 1, 0, -262150, 1, 0, -262149, 7, 0, -262148, 3, 0, -262147, 3, 0, -262146, 3, 0, -262145, 3, 0, -327680, 3, 0, -327679, 3, 0, -327678, 3, 0, -327677, 3, 0, -327676, 3, 0, -327675, 3, 0, -327674, 3, 0, -327673, 3, 0, -327672, 3, 0, -327671, 3, 0, -327670, 3, 0, -327669, 3, 0, -327668, 3, 0, -327667, 3, 0, -327666, 3, 0, -327665, 3, 0, -327664, 536870919, 0, -327663, -1073741823, 0, -327662, -1073741823, 0, -327661, -1073741823, 0, -327660, -1073741823, 0, -327659, -1073741823, 0, -327658, -1073741823, 0, -327657, -1073741823, 0, -327656, -1073741823, 0, -196619, 1, 0, -196618, 1, 0, -196617, 1, 0, -196616, 1, 0, -196615, 1, 0, -196614, 1, 0, -196613, -1073741821, 0, -196612, 1073741830, 0, -196611, 1073741830, 0, -196610, 1073741830, 0, -196609, 1, 0, -262144, 1, 0, -262143, 6, 0, -262142, 1073741830, 0, -262141, 1073741830, 0, -262140, 1073741830, 0, -262139, 1073741830, 0, -262138, 1073741830, 0, -262137, 1073741830, 0, -262136, 1073741830, 0, -262135, 1073741830, 0, -262134, 1, 0, -262133, 1073741830, 0, -262132, 1073741830, 0, -262131, 1073741830, 0, -262130, 1073741830, 0, -262129, 1073741830, 0, -262128, -536870909, 0, -262127, -1073741823, 0, -262126, -1073741823, 0, -262125, -1073741823, 0, -262124, -1073741823, 0, -262123, -1073741823, 0, -262122, -1073741823, 0, -262121, -1073741823, 0, -262120, -1073741823, 0, -131083, 1, 0, -131082, 1, 0, -131081, 1, 0, -131080, 1, 0, -131079, 1, 0, -131078, 1, 0, -131077, -1073741821, 0, -131076, 6, 0, -131075, 6, 0, -131074, 6, 0, -131073, 1, 0, -196608, 1, 0, -196607, 6, 0, -196606, 6, 0, -196605, 6, 0, -196604, 6, 0, -196603, 6, 0, -196602, 6, 0, -196601, 6, 0, -196600, 6, 0, -196599, 6, 0, -196598, 1, 0, -196597, 6, 0, -196596, 6, 0, -196595, 6, 0, -196594, 6, 0, -196593, 6, 0, -196592, -536870909, 0, -196591, -1073741823, 0, -196590, -1073741823, 0, -196589, -1073741823, 0, -196588, -1073741823, 0, -196587, -1073741823, 0, -196586, -1073741823, 0, -196585, -1073741823, 0, -196584, -1073741823, 0, -65547, 1, 0, -65546, 1, 0, -65545, 1, 0, -65544, 1, 0, -65543, 1, 0, -65542, 1, 0, -65541, -1073741821, 0, -65540, 1073741830, 0, -65539, 1073741830, 0, -65538, 1073741830, 0, -65537, 5, 0, -131071, 6, 0, -131070, 1073741830, 0, -131069, 1073741830, 0, -131068, 1073741830, 0, -131067, 1073741830, 0, -131066, 1073741830, 0, -131065, 1073741830, 0, -131064, 1073741830, 0, -131063, 1073741830, 0, -131062, 3, 0, -131061, 1073741830, 0, -131060, 1073741830, 0, -131059, 1073741830, 0, -131058, 1073741830, 0, -131057, 1073741830, 0, -131056, -536870909, 0, -131055, -1073741823, 0, -131054, -1073741823, 0, -131053, -1073741823, 0, -131052, -1073741823, 0, -131051, -1073741823, 0, -131050, -1073741823, 0, -131049, -1073741823, 0, -131048, -1073741823, 0, -11, 1, 0, -10, 1, 0, -9, 1, 0, -8, 1, 0, -7, 1, 0, -6, 1, 0, -5, -1073741821, 0, -4, 6, 0, -3, 6, 0, -2, 6, 0, -65535, 6, 0, -65534, 6, 0, -65533, 6, 0, -65532, 6, 0, -65531, 6, 0, -65530, 6, 0, -65529, 6, 0, -65528, 6, 0, -65527, 6, 0, -65526, 1, 0, -65525, 6, 0, -65524, 6, 0, -65523, 6, 0, -65522, 6, 0, -65521, 6, 0, -65520, -536870909, 0, -65519, -1073741823, 0, -65518, -1073741823, 0, -65517, -1073741823, 0, -65516, -1073741823, 0, -65515, -1073741823, 0, -65514, -1073741823, 0, -65513, -1073741823, 0, -65512, -1073741823, 0, 65525, 1, 0, 65526, 1, 0, 65527, 1, 0, 65528, 1, 0, 65529, 1, 0, 65530, 1, 0, 65531, -1073741817, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 1610612743, 0, 17, -1073741823, 0, 18, -1073741823, 0, 19, -1073741823, 0, 20, -1073741823, 0, 21, -1073741823, 0, 22, -1073741823, 0, 23, -1073741823, 0, 24, -1073741823, 0, 131061, 1, 0, 131062, 1, 0, 131063, 1, 0, 131064, 1, 0, 131065, 1, 0, 131066, 1, 0, 131067, 1, 0, 131068, 1, 0, 131069, 1, 0, 131070, 1, 0, 131071, 1, 0, 65536, 1, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, -1073741823, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 196597, 1, 0, 196598, 1, 0, 196599, 1, 0, 196600, 1, 0, 196601, 1, 0, 196602, 1, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, 196606, 1, 0, 196607, 1, 0, 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 262133, 1, 0, 262134, 1, 0, 262135, 1, 0, 262136, 1, 0, 262137, 1, 0, 262138, 1, 0, 262139, 1, 0, 262140, 1, 0, 262141, 1, 0, 262142, 1, 0, 262143, 1, 0, 196608, 1, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 327669, 1, 0, 327670, 1, 0, 327671, 1, 0, 327672, 1, 0, 327673, 1, 0, 327674, 1, 0, 327675, 1, 0, 327676, 1, 0, 327677, 1, 0, 327678, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 393205, 1, 0, 393206, 1, 0, 393207, 1, 0, 393208, 1, 0, 393209, 1, 0, 393210, 1, 0, 393211, 1, 0, 393212, 1, 0, 393213, 1, 0, 393214, 1, 0, 393215, 1, 0, 327680, 1, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 458741, 1, 0, 458742, 1, 0, 458743, 1, 0, 458744, 1, 0, 458745, 1, 0, 458746, 1, 0, 458747, 1, 0, 458748, 1, 0, 458749, 1, 0, 458750, 1, 0, 458751, 1, 0, 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="64" type="TileMap" parent="."]
tile_set = SubResource( 12 )
collision_layer = 4
collision_mask = 3
format = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Room1Cikis" parent="." instance=ExtResource( 11 )]
position = Vector2( 0, -32 )

[node name="Masalar" type="Node2D" parent="."]

[node name="Masa" type="Sprite" parent="Masalar"]
position = Vector2( 64, -11 )
scale = Vector2( 0.625, 0.478261 )
texture = ExtResource( 12 )

[node name="Sandalye" type="Sprite" parent="Masalar/Masa"]
position = Vector2( 19.2, 2.09091 )
texture = ExtResource( 13 )

[node name="Masa2" type="Sprite" parent="Masalar"]
position = Vector2( 106, -11 )
scale = Vector2( 0.625, 0.478261 )
texture = ExtResource( 12 )

[node name="Sandalye" type="Sprite" parent="Masalar/Masa2"]
position = Vector2( 19.2, 2.09091 )
texture = ExtResource( 13 )

[node name="Masa3" type="Sprite" parent="Masalar"]
position = Vector2( 148, -11 )
scale = Vector2( 0.625, 0.478261 )
texture = ExtResource( 12 )

[node name="Sandalye" type="Sprite" parent="Masalar/Masa3"]
position = Vector2( 19.2, 2.09091 )
texture = ExtResource( 13 )

[node name="Masa4" type="Sprite" parent="Masalar"]
position = Vector2( 189, -11 )
scale = Vector2( 0.625, 0.478261 )
texture = ExtResource( 12 )

[node name="Sandalye" type="Sprite" parent="Masalar/Masa4"]
position = Vector2( 19.2, 2.09091 )
texture = ExtResource( 13 )

[node name="Masa5" type="Sprite" parent="Masalar"]
position = Vector2( 231, -11 )
scale = Vector2( 0.625, 0.478261 )
texture = ExtResource( 12 )

[node name="Sandalye" type="Sprite" parent="Masalar/Masa5"]
position = Vector2( 19.2, 2.09091 )
texture = ExtResource( 13 )

[node name="Masa6" type="Sprite" parent="Masalar"]
position = Vector2( 273, -11 )
scale = Vector2( 0.625, 0.478261 )
texture = ExtResource( 12 )

[node name="Sandalye" type="Sprite" parent="Masalar/Masa6"]
position = Vector2( 19.2, 2.09091 )
texture = ExtResource( 13 )

[node name="Masa2" type="Sprite" parent="."]
position = Vector2( 397, -12 )
scale = Vector2( 1.3125, 0.75 )
texture = ExtResource( 19 )

[node name="FoodElevator" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="Area2D" type="Area2D" parent="FoodElevator"]
position = Vector2( 323, -33 )

[node name="Sprite" type="Sprite" parent="FoodElevator/Area2D"]
position = Vector2( 17, 12 )
texture = ExtResource( 14 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="FoodElevator/Area2D"]
position = Vector2( 9, 8 )
texture = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FoodElevator/Area2D"]
visible = false
position = Vector2( 15, 10 )
shape = SubResource( 13 )

[node name="Button" type="Button" parent="FoodElevator/Area2D"]
visible = false
margin_left = -4.0
margin_top = -13.0
margin_right = 34.0
margin_bottom = 33.0
flat = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.792157, 0.792157, 0.792157, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="PauseMenu" parent="." instance=ExtResource( 17 )]

[node name="Sifonyer2" type="Sprite" parent="."]
position = Vector2( 477, -29 )
scale = Vector2( 1.5, 1.78125 )
texture = ExtResource( 20 )

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 1, -18 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -10.0
autoplay = true

[connection signal="body_entered" from="FoodElevator/Area2D" to="FoodElevator" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="FoodElevator/Area2D" to="FoodElevator" method="_on_Area2D_body_exited"]
[connection signal="pressed" from="FoodElevator/Area2D/Button" to="FoodElevator" method="_on_Button_pressed"]
